--- a/project_2_file/ay_sprint2/05_인구밀도_전력_시각화.ipynb
+++ b/project_2_file/ay_sprint2/05_인구밀도_전력_시각화.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "eb18bbf2-6e0d-4548-8dd3-98f30f0213b7",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "11cbe5f4-1f7a-4dfa-a5c4-430cf49438f3",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "7b064313-7f5c-4487-8dd3-8ac9a5adc70c",
    "metadata": {},
    "outputs": [],
@@ -40,13 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "3168089a-8f84-4a32-9d84-8b77459b58e0",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -199,7 +195,7 @@
        " 2022.12]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "d7e8283b-f04e-48c5-9378-dfc38938780f",
    "metadata": {},
    "outputs": [],
@@ -220,12 +216,384 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "a1ed0452-b757-4d46-8917-17db30f98af3",
    "metadata": {},
    "outputs": [],
    "source": [
     "pop_d = pop_d.astype({'연월':'float'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "116b9d85-3f09-4a7d-b81b-9ecb300ba12f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>전국</th>\n",
+       "      <th>서울특별시</th>\n",
+       "      <th>부산광역시</th>\n",
+       "      <th>대구광역시</th>\n",
+       "      <th>인천광역시</th>\n",
+       "      <th>광주광역시</th>\n",
+       "      <th>대전광역시</th>\n",
+       "      <th>울산광역시</th>\n",
+       "      <th>세종특별자치시</th>\n",
+       "      <th>...</th>\n",
+       "      <th>강원도</th>\n",
+       "      <th>충청북도</th>\n",
+       "      <th>충청남도</th>\n",
+       "      <th>전라북도</th>\n",
+       "      <th>전라남도</th>\n",
+       "      <th>경상북도</th>\n",
+       "      <th>경상남도</th>\n",
+       "      <th>제주특별자치도</th>\n",
+       "      <th>연도</th>\n",
+       "      <th>연월</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2011.01</td>\n",
+       "      <td>504</td>\n",
+       "      <td>17046</td>\n",
+       "      <td>4643</td>\n",
+       "      <td>2841</td>\n",
+       "      <td>2675</td>\n",
+       "      <td>2906</td>\n",
+       "      <td>2786</td>\n",
+       "      <td>1063</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>208</td>\n",
+       "      <td>240</td>\n",
+       "      <td>231</td>\n",
+       "      <td>156</td>\n",
+       "      <td>141</td>\n",
+       "      <td>312</td>\n",
+       "      <td>309</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2011.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2011.02</td>\n",
+       "      <td>504</td>\n",
+       "      <td>17048</td>\n",
+       "      <td>4643</td>\n",
+       "      <td>2841</td>\n",
+       "      <td>2679</td>\n",
+       "      <td>2910</td>\n",
+       "      <td>2789</td>\n",
+       "      <td>1063</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>208</td>\n",
+       "      <td>240</td>\n",
+       "      <td>231</td>\n",
+       "      <td>156</td>\n",
+       "      <td>141</td>\n",
+       "      <td>312</td>\n",
+       "      <td>309</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2011.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2011.03</td>\n",
+       "      <td>505</td>\n",
+       "      <td>17037</td>\n",
+       "      <td>4641</td>\n",
+       "      <td>2840</td>\n",
+       "      <td>2682</td>\n",
+       "      <td>2910</td>\n",
+       "      <td>2790</td>\n",
+       "      <td>1064</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>208</td>\n",
+       "      <td>241</td>\n",
+       "      <td>231</td>\n",
+       "      <td>156</td>\n",
+       "      <td>141</td>\n",
+       "      <td>312</td>\n",
+       "      <td>309</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2011.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2011.04</td>\n",
+       "      <td>505</td>\n",
+       "      <td>17027</td>\n",
+       "      <td>4639</td>\n",
+       "      <td>2840</td>\n",
+       "      <td>2686</td>\n",
+       "      <td>2911</td>\n",
+       "      <td>2792</td>\n",
+       "      <td>1065</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>209</td>\n",
+       "      <td>241</td>\n",
+       "      <td>231</td>\n",
+       "      <td>156</td>\n",
+       "      <td>141</td>\n",
+       "      <td>312</td>\n",
+       "      <td>309</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2011.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2011.05</td>\n",
+       "      <td>505</td>\n",
+       "      <td>17017</td>\n",
+       "      <td>4639</td>\n",
+       "      <td>2840</td>\n",
+       "      <td>2689</td>\n",
+       "      <td>2913</td>\n",
+       "      <td>2794</td>\n",
+       "      <td>1065</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>209</td>\n",
+       "      <td>241</td>\n",
+       "      <td>231</td>\n",
+       "      <td>156</td>\n",
+       "      <td>141</td>\n",
+       "      <td>312</td>\n",
+       "      <td>310</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>2011.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>2022.08</td>\n",
+       "      <td>513</td>\n",
+       "      <td>15683</td>\n",
+       "      <td>4326</td>\n",
+       "      <td>2683</td>\n",
+       "      <td>2779</td>\n",
+       "      <td>2863</td>\n",
+       "      <td>2681</td>\n",
+       "      <td>1048</td>\n",
+       "      <td>820</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>215</td>\n",
+       "      <td>257</td>\n",
+       "      <td>219</td>\n",
+       "      <td>147</td>\n",
+       "      <td>137</td>\n",
+       "      <td>312</td>\n",
+       "      <td>367</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>2022.09</td>\n",
+       "      <td>512</td>\n",
+       "      <td>15621</td>\n",
+       "      <td>4316</td>\n",
+       "      <td>2678</td>\n",
+       "      <td>2776</td>\n",
+       "      <td>2859</td>\n",
+       "      <td>2678</td>\n",
+       "      <td>1047</td>\n",
+       "      <td>821</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>215</td>\n",
+       "      <td>257</td>\n",
+       "      <td>219</td>\n",
+       "      <td>147</td>\n",
+       "      <td>136</td>\n",
+       "      <td>311</td>\n",
+       "      <td>366</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>2022.10</td>\n",
+       "      <td>512</td>\n",
+       "      <td>15609</td>\n",
+       "      <td>4314</td>\n",
+       "      <td>2677</td>\n",
+       "      <td>2778</td>\n",
+       "      <td>2859</td>\n",
+       "      <td>2679</td>\n",
+       "      <td>1046</td>\n",
+       "      <td>822</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>215</td>\n",
+       "      <td>257</td>\n",
+       "      <td>219</td>\n",
+       "      <td>147</td>\n",
+       "      <td>136</td>\n",
+       "      <td>311</td>\n",
+       "      <td>366</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>2022.11</td>\n",
+       "      <td>512</td>\n",
+       "      <td>15598</td>\n",
+       "      <td>4312</td>\n",
+       "      <td>2676</td>\n",
+       "      <td>2781</td>\n",
+       "      <td>2858</td>\n",
+       "      <td>2679</td>\n",
+       "      <td>1046</td>\n",
+       "      <td>823</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>215</td>\n",
+       "      <td>257</td>\n",
+       "      <td>219</td>\n",
+       "      <td>147</td>\n",
+       "      <td>136</td>\n",
+       "      <td>311</td>\n",
+       "      <td>366</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>2022.12</td>\n",
+       "      <td>512</td>\n",
+       "      <td>15584</td>\n",
+       "      <td>4308</td>\n",
+       "      <td>2673</td>\n",
+       "      <td>2783</td>\n",
+       "      <td>2856</td>\n",
+       "      <td>2677</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>824</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91</td>\n",
+       "      <td>215</td>\n",
+       "      <td>257</td>\n",
+       "      <td>219</td>\n",
+       "      <td>147</td>\n",
+       "      <td>136</td>\n",
+       "      <td>311</td>\n",
+       "      <td>366</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>2022.12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>144 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Unnamed: 0   전국  서울특별시  부산광역시  대구광역시  인천광역시  광주광역시  대전광역시  울산광역시  \\\n",
+       "0       2011.01  504  17046   4643   2841   2675   2906   2786   1063   \n",
+       "1       2011.02  504  17048   4643   2841   2679   2910   2789   1063   \n",
+       "2       2011.03  505  17037   4641   2840   2682   2910   2790   1064   \n",
+       "3       2011.04  505  17027   4639   2840   2686   2911   2792   1065   \n",
+       "4       2011.05  505  17017   4639   2840   2689   2913   2794   1065   \n",
+       "..          ...  ...    ...    ...    ...    ...    ...    ...    ...   \n",
+       "139     2022.08  513  15683   4326   2683   2779   2863   2681   1048   \n",
+       "140     2022.09  512  15621   4316   2678   2776   2859   2678   1047   \n",
+       "141     2022.10  512  15609   4314   2677   2778   2859   2679   1046   \n",
+       "142     2022.11  512  15598   4312   2676   2781   2858   2679   1046   \n",
+       "143     2022.12  512  15584   4308   2673   2783   2856   2677   1045   \n",
+       "\n",
+       "     세종특별자치시  ...  강원도  충청북도  충청남도  전라북도  전라남도  경상북도  경상남도  제주특별자치도    연도  \\\n",
+       "0          0  ...   91   208   240   231   156   141   312      309  2011   \n",
+       "1          0  ...   91   208   240   231   156   141   312      309  2011   \n",
+       "2          0  ...   91   208   241   231   156   141   312      309  2011   \n",
+       "3          0  ...   91   209   241   231   156   141   312      309  2011   \n",
+       "4          0  ...   91   209   241   231   156   141   312      310  2011   \n",
+       "..       ...  ...  ...   ...   ...   ...   ...   ...   ...      ...   ...   \n",
+       "139      820  ...   91   215   257   219   147   137   312      367  2022   \n",
+       "140      821  ...   91   215   257   219   147   136   311      366  2022   \n",
+       "141      822  ...   91   215   257   219   147   136   311      366  2022   \n",
+       "142      823  ...   91   215   257   219   147   136   311      366  2022   \n",
+       "143      824  ...   91   215   257   219   147   136   311      366  2022   \n",
+       "\n",
+       "          연월  \n",
+       "0    2011.01  \n",
+       "1    2011.02  \n",
+       "2    2011.03  \n",
+       "3    2011.04  \n",
+       "4    2011.05  \n",
+       "..       ...  \n",
+       "139  2022.08  \n",
+       "140  2022.09  \n",
+       "141  2022.10  \n",
+       "142  2022.11  \n",
+       "143  2022.12  \n",
+       "\n",
+       "[144 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop_d"
    ]
   },
   {
