죄송합니다 데이터 하나 뺴먹었습니다

--- a/project_2_file/waj.py/의료인력현황추이/의료인력현황.ipynb
+++ b/project_2_file/waj.py/의료인력현황추이/의료인력현황.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
        "[20 rows x 193 columns]"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -680,7 +680,7 @@
        " '제주']"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1098,7 +1098,7 @@
        "19    5575    5706    5984  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
        " '제주']"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1496,7 @@
        "2021  13102  11819  15824  17834  17368  19840  29444  5984  "
       ]
      },
-     "execution_count": 135,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1507,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1847,7 @@
        "2021  13102  11819  15824  17834  17368  19840  29444  5984  "
       ]
      },
-     "execution_count": 137,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1869,7 +1869,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1880,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +1916,7 @@
        " '제주']"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1927,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1952,7 +1952,7 @@
        " '충청북도']"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1965,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
        "18"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2004,7 +2004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2344,7 +2344,7 @@
        "2021  11819  15824  17834  17368  19840  29444    5984  2021  "
       ]
      },
-     "execution_count": 151,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2382,7 +2382,7 @@
        " '연도']"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,7 +2393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2417,31 +2417,29 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>계</th>\n",
-       "      <th>서울</th>\n",
-       "      <th>부산</th>\n",
-       "      <th>대구</th>\n",
-       "      <th>인천</th>\n",
-       "      <th>광주</th>\n",
-       "      <th>대전</th>\n",
-       "      <th>울산</th>\n",
-       "      <th>세종</th>\n",
-       "      <th>경기</th>\n",
-       "      <th>강원</th>\n",
-       "      <th>충북</th>\n",
-       "      <th>충남</th>\n",
-       "      <th>전북</th>\n",
-       "      <th>전남</th>\n",
-       "      <th>경북</th>\n",
-       "      <th>경남</th>\n",
-       "      <th>제주</th>\n",
+       "      <th>서울특별시</th>\n",
+       "      <th>부산광역시</th>\n",
+       "      <th>대구광역시</th>\n",
+       "      <th>인천광역시</th>\n",
+       "      <th>광주광역시</th>\n",
+       "      <th>대전광역시</th>\n",
+       "      <th>울산광역시</th>\n",
+       "      <th>세종특별자치시</th>\n",
+       "      <th>경기도</th>\n",
+       "      <th>강원도</th>\n",
+       "      <th>충청북도</th>\n",
+       "      <th>충청남도</th>\n",
+       "      <th>전라북도</th>\n",
+       "      <th>전라남도</th>\n",
+       "      <th>경상북도</th>\n",
+       "      <th>경상남도</th>\n",
+       "      <th>제주특별자치도</th>\n",
        "      <th>연도</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2010</th>\n",
-       "      <td>278789</td>\n",
        "      <td>73801</td>\n",
        "      <td>22037</td>\n",
        "      <td>15594</td>\n",
@@ -2463,7 +2461,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2011</th>\n",
-       "      <td>304705</td>\n",
        "      <td>79291</td>\n",
        "      <td>24389</td>\n",
        "      <td>16706</td>\n",
@@ -2485,7 +2482,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2012</th>\n",
-       "      <td>310764</td>\n",
        "      <td>81426</td>\n",
        "      <td>24861</td>\n",
        "      <td>17045</td>\n",
@@ -2507,7 +2503,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2013</th>\n",
-       "      <td>332660</td>\n",
        "      <td>87638</td>\n",
        "      <td>26768</td>\n",
        "      <td>19098</td>\n",
@@ -2529,7 +2524,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2014</th>\n",
-       "      <td>351550</td>\n",
        "      <td>91252</td>\n",
        "      <td>28399</td>\n",
        "      <td>19629</td>\n",
@@ -2551,7 +2545,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015</th>\n",
-       "      <td>368954</td>\n",
        "      <td>94274</td>\n",
        "      <td>30226</td>\n",
        "      <td>20556</td>\n",
@@ -2573,7 +2566,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016</th>\n",
-       "      <td>398223</td>\n",
        "      <td>101142</td>\n",
        "      <td>32387</td>\n",
        "      <td>21902</td>\n",
@@ -2595,7 +2587,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2017</th>\n",
-       "      <td>414196</td>\n",
        "      <td>103941</td>\n",
        "      <td>33393</td>\n",
        "      <td>22450</td>\n",
@@ -2617,7 +2608,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018</th>\n",
-       "      <td>430795</td>\n",
        "      <td>107232</td>\n",
        "      <td>34495</td>\n",
        "      <td>23401</td>\n",
@@ -2639,7 +2629,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019</th>\n",
-       "      <td>460995</td>\n",
        "      <td>114861</td>\n",
        "      <td>37028</td>\n",
        "      <td>26087</td>\n",
@@ -2661,7 +2650,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020</th>\n",
-       "      <td>478086</td>\n",
        "      <td>118497</td>\n",
        "      <td>37898</td>\n",
        "      <td>26608</td>\n",
@@ -2683,7 +2671,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021</th>\n",
-       "      <td>498552</td>\n",
        "      <td>123955</td>\n",
        "      <td>39169</td>\n",
        "      <td>28205</td>\n",
@@ -2708,36 +2695,36 @@
        "</div>"
       ],
       "text/plain": [
-       "           계      서울     부산     대구     인천     광주     대전    울산    세종      경기   \n",
-       "2010  278789   73801  22037  15594  11787  10258   9896  5195     -   50743  \\\n",
-       "2011  304705   79291  24389  16706  13058  11637  10608  5743     -   57043   \n",
-       "2012  310764   81426  24861  17045  13444  11737  11000  5817   337   58096   \n",
-       "2013  332660   87638  26768  19098  14531  12315  11619  6483   377   61607   \n",
-       "2014  351550   91252  28399  19629  16072  13368  12042  6882   474   66821   \n",
-       "2015  368954   94274  30226  20556  17454  14227  12555  7201   589   70166   \n",
-       "2016  398223  101142  32387  21902  19308  15161  13482  7915   671   77429   \n",
-       "2017  414196  103941  33393  22450  20765  15880  14064  8150   843   81651   \n",
-       "2018  430795  107232  34495  23401  22173  16467  14586  8218   973   86060   \n",
-       "2019  460995  114861  37028  26087  24081  17835  15746  8950  1109   91723   \n",
-       "2020  478086  118497  37898  26608  24983  18117  16095  9205  1899   98513   \n",
-       "2021  498552  123955  39169  28205  25754  18414  16628  9531  2065  103616   \n",
+       "       서울특별시  부산광역시  대구광역시  인천광역시  광주광역시  대전광역시 울산광역시 세종특별자치시     경기도    강원도   \n",
+       "2010   73801  22037  15594  11787  10258   9896  5195       -   50743   8764  \\\n",
+       "2011   79291  24389  16706  13058  11637  10608  5743       -   57043   9040   \n",
+       "2012   81426  24861  17045  13444  11737  11000  5817     337   58096   9104   \n",
+       "2013   87638  26768  19098  14531  12315  11619  6483     377   61607   9365   \n",
+       "2014   91252  28399  19629  16072  13368  12042  6882     474   66821   9693   \n",
+       "2015   94274  30226  20556  17454  14227  12555  7201     589   70166  10279   \n",
+       "2016  101142  32387  21902  19308  15161  13482  7915     671   77429  10721   \n",
+       "2017  103941  33393  22450  20765  15880  14064  8150     843   81651  11042   \n",
+       "2018  107232  34495  23401  22173  16467  14586  8218     973   86060  11373   \n",
+       "2019  114861  37028  26087  24081  17835  15746  8950    1109   91723  12115   \n",
+       "2020  118497  37898  26608  24983  18117  16095  9205    1899   98513  12525   \n",
+       "2021  123955  39169  28205  25754  18414  16628  9531    2065  103616  13102   \n",
        "\n",
-       "         강원     충북     충남     전북     전남     경북     경남    제주    연도  \n",
-       "2010   8764   7163   9354  11152  11366  12861  15323  3495  2010  \n",
-       "2011   9040   7737  10068  12084  12323  13936  17360  3682  2011  \n",
-       "2012   9104   7795   9872  12147  12418  14066  17995  3604  2012  \n",
-       "2013   9365   8358  10387  12887  12973  14883  19226  4145  2013  \n",
-       "2014   9693   8635  11020  13476  13713  15552  20191  4331  2014  \n",
-       "2015  10279   9238  11549  14246  14400  16019  21409  4566  2015  \n",
-       "2016  10721   9667  12275  15147  15045  17160  24002  4809  2016  \n",
-       "2017  11042  10074  12844  15647  15380  17851  25142  5079  2017  \n",
-       "2018  11373  10654  13168  16297  16040  18267  26074  5317  2018  \n",
-       "2019  12115  11258  14122  16821  16775  19165  27744  5575  2019  \n",
-       "2020  12525  11446  14417  17277  16872  19271  28757  5706  2020  \n",
-       "2021  13102  11819  15824  17834  17368  19840  29444  5984  2021  "
+       "       충청북도   충청남도   전라북도   전라남도   경상북도   경상남도 제주특별자치도    연도  \n",
+       "2010   7163   9354  11152  11366  12861  15323    3495  2010  \n",
+       "2011   7737  10068  12084  12323  13936  17360    3682  2011  \n",
+       "2012   7795   9872  12147  12418  14066  17995    3604  2012  \n",
+       "2013   8358  10387  12887  12973  14883  19226    4145  2013  \n",
+       "2014   8635  11020  13476  13713  15552  20191    4331  2014  \n",
+       "2015   9238  11549  14246  14400  16019  21409    4566  2015  \n",
+       "2016   9667  12275  15147  15045  17160  24002    4809  2016  \n",
+       "2017  10074  12844  15647  15380  17851  25142    5079  2017  \n",
+       "2018  10654  13168  16297  16040  18267  26074    5317  2018  \n",
+       "2019  11258  14122  16821  16775  19165  27744    5575  2019  \n",
+       "2020  11446  14417  17277  16872  19271  28757    5706  2020  \n",
+       "2021  11819  15824  17834  17368  19840  29444    5984  2021  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2748,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2759,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2877,7 +2864,7 @@
        "[204 rows x 3 columns]"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2888,7 +2875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2897,7 +2884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -3039,7 +3026,7 @@
        "[204 rows x 5 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3051,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -3169,7 +3156,7 @@
        "[204 rows x 3 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3181,7 +3168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3192,7 +3179,7 @@
        "       '충청남도', '충청북도'], dtype=object)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3203,7 +3190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -3229,7 +3216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3255,7 +3242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3264,7 +3251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3290,7 +3277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -3420,7 +3407,7 @@
        "[187 rows x 4 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3433,11 +3420,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('사용량, 의료인력수.csv')"
+    "# df3.to_csv('사용량, 의료인력수.csv')"
    ]
   },
   {
