--- a/project_2_file/waj.py/의료인력현황추이/의료인력현황.ipynb
+++ b/project_2_file/waj.py/의료인력현황추이/의료인력현황.ipynb
@@ -647,6 +647,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##시도별 컬럼을 리스트형태로 변환\n",
     "col = df['시도별(1)'].to_list()"
    ]
   },
@@ -704,6 +705,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##16번째마다 있는 행을 가져옴 '연도별\"\n",
     "df = df.iloc[:,[0,16,32,48,64,80,96,112,128,144,160,176]]"
    ]
   },
@@ -1511,6 +1513,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##col 라는 리스트를 컬럼에 추가\n",
     "df.columns = col"
    ]
   },
@@ -1958,6 +1961,7 @@
     }
    ],
    "source": [
+    "##지역풀네임\n",
     "['강원도', '경기도', '경상남도', '경상북도', '광주광역시', '대구광역시', '대전광역시', '부산광역시',\n",
     "       '서울특별시', '세종특별자치시', '울산광역시', '인천광역시', '전라남도', '전라북도', '제주특별자치도',\n",
     "       '충청남도', '충청북도']"
@@ -2741,7 +2745,7 @@
    "source": [
     "df = df.melt(id_vars=['연도'], value_vars=['서울특별시','부산광역시','대구광역시','인천광역시','광주광역시','대전광역시','울산광역시',\n",
     "                                         '세종특별자치시','경기도','강원도','충청북도','충청남도',\n",
-    "'전라북도','전라남도', '경상북도', '경상남도','제주특별자치도'], var_name='시도', value_name='의료인력수')"
+    "'전라북도','전라남도', '경상북도', '경상남도','제주특별자치도'], var_name='시도', value_name='지방세')"
    ]
   },
   {
