--- a/industryapp/employment/data/data.ipynb
+++ b/industryapp/employment/data/data.ipynb
@@ -13,6 +13,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2448 entries, 0 to 2447\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   연도      2448 non-null   int64  \n",
+      " 1   월       2448 non-null   int64  \n",
+      " 2   시도      2448 non-null   object \n",
+      " 3   고용률     2448 non-null   float64\n",
+      " 4   사용량     2448 non-null   int64  \n",
+      " 5   위도      2448 non-null   float64\n",
+      " 6   경도      2448 non-null   float64\n",
+      "dtypes: float64(3), int64(3), object(1)\n",
+      "memory usage: 134.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_1 = pd.read_csv(\"./전력량_고용률_마커.csv\")\n",
+    "df_1.drop(columns=['Unnamed: 0'], inplace=True)\n",
+    "df_1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -22,50 +54,22 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2448 entries, 0 to 2447\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   연도      2448 non-null   int64  \n",
-      " 1   월       2448 non-null   int64  \n",
-      " 2   시도      2448 non-null   object \n",
-      " 3   고용률     2448 non-null   float64\n",
-      "dtypes: float64(1), int64(2), object(1)\n",
-      "memory usage: 76.6+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_1 = pd.read_csv(\"./고용률_지도시각화용.csv\")\n",
-    "df_1.drop(columns=['Unnamed: 0', '연월'], inplace=True)\n",
-    "df_1.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2448 entries, 0 to 2447\n",
-      "Data columns (total 4 columns):\n",
+      "Data columns (total 5 columns):\n",
       " #   Column  Non-Null Count  Dtype \n",
       "---  ------  --------------  ----- \n",
-      " 0   연도      2448 non-null   int64 \n",
-      " 1   월       2448 non-null   int64 \n",
-      " 2   시도      2448 non-null   object\n",
-      " 3   사용량     2448 non-null   int64 \n",
-      "dtypes: int64(3), object(1)\n",
-      "memory usage: 76.6+ KB\n"
+      " 0   년월      2448 non-null   object\n",
+      " 1   연도      2448 non-null   int64 \n",
+      " 2   월       2448 non-null   int64 \n",
+      " 3   시도      2448 non-null   object\n",
+      " 4   사용량     2448 non-null   int64 \n",
+      "dtypes: int64(3), object(2)\n",
+      "memory usage: 95.8+ KB\n"
      ]
     }
    ],
    "source": [
     "df_2 = pd.read_csv(\"./전력 사용량 14차.csv\")\n",
-    "df_2.drop(columns=['Unnamed: 0', '년월'], inplace=True)\n",
+    "df_2.drop(columns=['Unnamed: 0'], inplace=True)\n",
     "df_2.info()"
    ]
   },
@@ -100,6 +104,9 @@
        "      <th>시도</th>\n",
        "      <th>고용률</th>\n",
        "      <th>사용량</th>\n",
+       "      <th>위도</th>\n",
+       "      <th>경도</th>\n",
+       "      <th>년월</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -110,6 +117,9 @@
        "      <td>서울특별시</td>\n",
        "      <td>57.6</td>\n",
        "      <td>4398183</td>\n",
+       "      <td>37.551638</td>\n",
+       "      <td>126.993243</td>\n",
+       "      <td>2010_1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -118,6 +128,9 @@
        "      <td>서울특별시</td>\n",
        "      <td>57.8</td>\n",
        "      <td>4168168</td>\n",
+       "      <td>37.551638</td>\n",
+       "      <td>126.993243</td>\n",
+       "      <td>2010_2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -126,6 +139,9 @@
        "      <td>서울특별시</td>\n",
        "      <td>58.3</td>\n",
        "      <td>3624186</td>\n",
+       "      <td>37.551638</td>\n",
+       "      <td>126.993243</td>\n",
+       "      <td>2010_3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -134,6 +150,9 @@
        "      <td>서울특별시</td>\n",
        "      <td>59.2</td>\n",
        "      <td>3719082</td>\n",
+       "      <td>37.551638</td>\n",
+       "      <td>126.993243</td>\n",
+       "      <td>2010_4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -142,9 +161,15 @@
        "      <td>서울특별시</td>\n",
        "      <td>60.0</td>\n",
        "      <td>3426951</td>\n",
+       "      <td>37.551638</td>\n",
+       "      <td>126.993243</td>\n",
+       "      <td>2010_5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -158,6 +183,9 @@
        "      <td>제주특별자치도</td>\n",
        "      <td>67.0</td>\n",
        "      <td>544310</td>\n",
+       "      <td>33.424967</td>\n",
+       "      <td>126.778084</td>\n",
+       "      <td>2021_8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2444</th>\n",
@@ -166,6 +194,9 @@
        "      <td>제주특별자치도</td>\n",
        "      <td>66.5</td>\n",
        "      <td>495549</td>\n",
+       "      <td>33.424967</td>\n",
+       "      <td>126.778084</td>\n",
+       "      <td>2021_9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2445</th>\n",
@@ -174,6 +205,9 @@
        "      <td>제주특별자치도</td>\n",
        "      <td>67.7</td>\n",
        "      <td>446949</td>\n",
+       "      <td>33.424967</td>\n",
+       "      <td>126.778084</td>\n",
+       "      <td>2021_10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2446</th>\n",
@@ -182,6 +216,9 @@
        "      <td>제주특별자치도</td>\n",
        "      <td>68.9</td>\n",
        "      <td>438179</td>\n",
+       "      <td>33.424967</td>\n",
+       "      <td>126.778084</td>\n",
+       "      <td>2021_11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2447</th>\n",
@@ -190,27 +227,30 @@
        "      <td>제주특별자치도</td>\n",
        "      <td>68.1</td>\n",
        "      <td>473291</td>\n",
+       "      <td>33.424967</td>\n",
+       "      <td>126.778084</td>\n",
+       "      <td>2021_12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2448 rows × 5 columns</p>\n",
+       "<p>2448 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        연도   월       시도   고용률      사용량\n",
-       "0     2010   1    서울특별시  57.6  4398183\n",
-       "1     2010   2    서울특별시  57.8  4168168\n",
-       "2     2010   3    서울특별시  58.3  3624186\n",
-       "3     2010   4    서울특별시  59.2  3719082\n",
-       "4     2010   5    서울특별시  60.0  3426951\n",
-       "...    ...  ..      ...   ...      ...\n",
-       "2443  2021   8  제주특별자치도  67.0   544310\n",
-       "2444  2021   9  제주특별자치도  66.5   495549\n",
-       "2445  2021  10  제주특별자치도  67.7   446949\n",
-       "2446  2021  11  제주특별자치도  68.9   438179\n",
-       "2447  2021  12  제주특별자치도  68.1   473291\n",
+       "        연도   월       시도   고용률      사용량         위도          경도       년월\n",
+       "0     2010   1    서울특별시  57.6  4398183  37.551638  126.993243   2010_1\n",
+       "1     2010   2    서울특별시  57.8  4168168  37.551638  126.993243   2010_2\n",
+       "2     2010   3    서울특별시  58.3  3624186  37.551638  126.993243   2010_3\n",
+       "3     2010   4    서울특별시  59.2  3719082  37.551638  126.993243   2010_4\n",
+       "4     2010   5    서울특별시  60.0  3426951  37.551638  126.993243   2010_5\n",
+       "...    ...  ..      ...   ...      ...        ...         ...      ...\n",
+       "2443  2021   8  제주특별자치도  67.0   544310  33.424967  126.778084   2021_8\n",
+       "2444  2021   9  제주특별자치도  66.5   495549  33.424967  126.778084   2021_9\n",
+       "2445  2021  10  제주특별자치도  67.7   446949  33.424967  126.778084  2021_10\n",
+       "2446  2021  11  제주특별자치도  68.9   438179  33.424967  126.778084  2021_11\n",
+       "2447  2021  12  제주특별자치도  68.1   473291  33.424967  126.778084  2021_12\n",
        "\n",
-       "[2448 rows x 5 columns]"
+       "[2448 rows x 8 columns]"
       ]
      },
      "execution_count": 5,
@@ -219,8 +259,17 @@
     }
    ],
    "source": [
-    "df_data = pd.merge(df_1,df_2, how='outer',on=['연도', '월', '시도'])\n",
+    "df_data = pd.merge(df_1,df_2, how='outer',on=['연도', '월', '시도', '사용량'])\n",
     "df_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_data.to_csv('전력량_고용률_마커_all.csv')"
    ]
   },
   {
