--- a/project_2_file/ay_sprint2/test.ipynb
+++ b/project_2_file/ay_sprint2/test.ipynb
@@ -17,8 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mark = pd.read_csv('./마커.csv')\n",
-    "pop_ele = pd.read_csv('./2011~2022_시도별_인구수&전력사용량.csv')"
+    "# mark = pd.read_csv('./마커.csv')\n",
+    "# pop_ele = pd.read_csv('./2011~2022_시도별_인구수&전력사용량.csv')"
    ]
   },
   {
@@ -28,8 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mark = mark.drop(columns='Unnamed: 0')\n",
-    "pop_ele = pop_ele.drop(columns='Unnamed: 0')"
+    "# mark = mark.drop(columns='Unnamed: 0')\n",
+    "# pop_ele = pop_ele.drop(columns='Unnamed: 0')"
    ]
   },
   {
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "mark"
+    "# mark"
    ]
   },
   {
@@ -340,13 +340,634 @@
     }
    ],
    "source": [
-    "pop_ele"
+    "# pop_ele"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "db5e39c3-4627-4375-b5f8-a55ece90af7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cd68ca56-66b2-41d6-b72a-a1d6d3e9a7d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('전력량_물가지수_기간.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "86f208b4-1433-4ecc-a9f1-4c86d9f4c551",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(columns='Unnamed: 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "aeb21fd5-a707-4c4a-a562-69a32fe815d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.astype({'기간':'str'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e0929c70-6c50-48f2-add9-47bc9d4fe241",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>물가지수</th>\n",
+       "      <th>사용량</th>\n",
+       "      <th>기간</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85.351</td>\n",
+       "      <td>2335102</td>\n",
+       "      <td>2010.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>2</td>\n",
+       "      <td>85.523</td>\n",
+       "      <td>2188707</td>\n",
+       "      <td>2010.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>3</td>\n",
+       "      <td>85.696</td>\n",
+       "      <td>2091419</td>\n",
+       "      <td>2010.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86.041</td>\n",
+       "      <td>2115785</td>\n",
+       "      <td>2010.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "      <td>86.128</td>\n",
+       "      <td>1988778</td>\n",
+       "      <td>2010.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>8</td>\n",
+       "      <td>102.750</td>\n",
+       "      <td>2878232</td>\n",
+       "      <td>2021.08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "      <td>103.170</td>\n",
+       "      <td>2636404</td>\n",
+       "      <td>2021.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>10</td>\n",
+       "      <td>103.350</td>\n",
+       "      <td>2461071</td>\n",
+       "      <td>2021.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>11</td>\n",
+       "      <td>103.870</td>\n",
+       "      <td>2519389</td>\n",
+       "      <td>2021.11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>104.040</td>\n",
+       "      <td>2779448</td>\n",
+       "      <td>2021.12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>144 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       연도   월     물가지수      사용량       기간\n",
+       "0    2010   1   85.351  2335102  2010.01\n",
+       "1    2010   2   85.523  2188707  2010.02\n",
+       "2    2010   3   85.696  2091419  2010.03\n",
+       "3    2010   4   86.041  2115785  2010.04\n",
+       "4    2010   5   86.128  1988778  2010.05\n",
+       "..    ...  ..      ...      ...      ...\n",
+       "139  2021   8  102.750  2878232  2021.08\n",
+       "140  2021   9  103.170  2636404  2021.09\n",
+       "141  2021  10  103.350  2461071   2021.1\n",
+       "142  2021  11  103.870  2519389  2021.11\n",
+       "143  2021  12  104.040  2779448  2021.12\n",
+       "\n",
+       "[144 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dacce4a9-6235-4146-9099-0d1298e7acd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ym = df['기간'].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e1462fe8-d185-4dc3-99a2-500f1a868678",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2010.01',\n",
+       " '2010.02',\n",
+       " '2010.03',\n",
+       " '2010.04',\n",
+       " '2010.05',\n",
+       " '2010.06',\n",
+       " '2010.07',\n",
+       " '2010.08',\n",
+       " '2010.09',\n",
+       " '2010.1',\n",
+       " '2010.11',\n",
+       " '2010.12',\n",
+       " '2011.01',\n",
+       " '2011.02',\n",
+       " '2011.03',\n",
+       " '2011.04',\n",
+       " '2011.05',\n",
+       " '2011.06',\n",
+       " '2011.07',\n",
+       " '2011.08',\n",
+       " '2011.09',\n",
+       " '2011.1',\n",
+       " '2011.11',\n",
+       " '2011.12',\n",
+       " '2012.01',\n",
+       " '2012.02',\n",
+       " '2012.03',\n",
+       " '2012.04',\n",
+       " '2012.05',\n",
+       " '2012.06',\n",
+       " '2012.07',\n",
+       " '2012.08',\n",
+       " '2012.09',\n",
+       " '2012.1',\n",
+       " '2012.11',\n",
+       " '2012.12',\n",
+       " '2013.01',\n",
+       " '2013.02',\n",
+       " '2013.03',\n",
+       " '2013.04',\n",
+       " '2013.05',\n",
+       " '2013.06',\n",
+       " '2013.07',\n",
+       " '2013.08',\n",
+       " '2013.09',\n",
+       " '2013.1',\n",
+       " '2013.11',\n",
+       " '2013.12',\n",
+       " '2014.01',\n",
+       " '2014.02',\n",
+       " '2014.03',\n",
+       " '2014.04',\n",
+       " '2014.05',\n",
+       " '2014.06',\n",
+       " '2014.07',\n",
+       " '2014.08',\n",
+       " '2014.09',\n",
+       " '2014.1',\n",
+       " '2014.11',\n",
+       " '2014.12',\n",
+       " '2015.01',\n",
+       " '2015.02',\n",
+       " '2015.03',\n",
+       " '2015.04',\n",
+       " '2015.05',\n",
+       " '2015.06',\n",
+       " '2015.07',\n",
+       " '2015.08',\n",
+       " '2015.09',\n",
+       " '2015.1',\n",
+       " '2015.11',\n",
+       " '2015.12',\n",
+       " '2016.01',\n",
+       " '2016.02',\n",
+       " '2016.03',\n",
+       " '2016.04',\n",
+       " '2016.05',\n",
+       " '2016.06',\n",
+       " '2016.07',\n",
+       " '2016.08',\n",
+       " '2016.09',\n",
+       " '2016.1',\n",
+       " '2016.11',\n",
+       " '2016.12',\n",
+       " '2017.01',\n",
+       " '2017.02',\n",
+       " '2017.03',\n",
+       " '2017.04',\n",
+       " '2017.05',\n",
+       " '2017.06',\n",
+       " '2017.07',\n",
+       " '2017.08',\n",
+       " '2017.09',\n",
+       " '2017.1',\n",
+       " '2017.11',\n",
+       " '2017.12',\n",
+       " '2018.01',\n",
+       " '2018.02',\n",
+       " '2018.03',\n",
+       " '2018.04',\n",
+       " '2018.05',\n",
+       " '2018.06',\n",
+       " '2018.07',\n",
+       " '2018.08',\n",
+       " '2018.09',\n",
+       " '2018.1',\n",
+       " '2018.11',\n",
+       " '2018.12',\n",
+       " '2019.01',\n",
+       " '2019.02',\n",
+       " '2019.03',\n",
+       " '2019.04',\n",
+       " '2019.05',\n",
+       " '2019.06',\n",
+       " '2019.07',\n",
+       " '2019.08',\n",
+       " '2019.09',\n",
+       " '2019.1',\n",
+       " '2019.11',\n",
+       " '2019.12',\n",
+       " '2020.01',\n",
+       " '2020.02',\n",
+       " '2020.03',\n",
+       " '2020.04',\n",
+       " '2020.05',\n",
+       " '2020.06',\n",
+       " '2020.07',\n",
+       " '2020.08',\n",
+       " '2020.09',\n",
+       " '2020.1',\n",
+       " '2020.11',\n",
+       " '2020.12',\n",
+       " '2021.01',\n",
+       " '2021.02',\n",
+       " '2021.03',\n",
+       " '2021.04',\n",
+       " '2021.05',\n",
+       " '2021.06',\n",
+       " '2021.07',\n",
+       " '2021.08',\n",
+       " '2021.09',\n",
+       " '2021.1',\n",
+       " '2021.11',\n",
+       " '2021.12']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ym"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "6dbac13c-2df2-4943-b69f-4edfe9fe7215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ym2 = []\n",
+    "for i in ym :\n",
+    "    ym2.append(i.replace('.','_'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6f693c3a-1ac0-41ba-880e-313833aae2d2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for i in ym2:\n",
+    "    i.replace('2014_1','2014_10')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "4909905b-8851-442a-bf39-ed622c5fffd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2021_12'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ym2[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "2117dbbb-7826-4569-b707-ce1e091e9594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ym2[141] = '2021_10'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ed646c10-463e-4481-baec-64bca1ecdbe8",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2010_01',\n",
+       " '2010_02',\n",
+       " '2010_03',\n",
+       " '2010_04',\n",
+       " '2010_05',\n",
+       " '2010_06',\n",
+       " '2010_07',\n",
+       " '2010_08',\n",
+       " '2010_09',\n",
+       " '2010_10',\n",
+       " '2010_11',\n",
+       " '2010_12',\n",
+       " '2011_01',\n",
+       " '2011_02',\n",
+       " '2011_03',\n",
+       " '2011_04',\n",
+       " '2011_05',\n",
+       " '2011_06',\n",
+       " '2011_07',\n",
+       " '2011_08',\n",
+       " '2011_09',\n",
+       " '2011_10',\n",
+       " '2011_11',\n",
+       " '2011_12',\n",
+       " '2012_01',\n",
+       " '2012_02',\n",
+       " '2012_03',\n",
+       " '2012_04',\n",
+       " '2012_05',\n",
+       " '2012_06',\n",
+       " '2012_07',\n",
+       " '2012_08',\n",
+       " '2012_09',\n",
+       " '2012_10',\n",
+       " '2012_11',\n",
+       " '2012_12',\n",
+       " '2013_01',\n",
+       " '2013_02',\n",
+       " '2013_03',\n",
+       " '2013_04',\n",
+       " '2013_05',\n",
+       " '2013_06',\n",
+       " '2013_07',\n",
+       " '2013_08',\n",
+       " '2013_09',\n",
+       " '2013_10',\n",
+       " '2013_11',\n",
+       " '2013_12',\n",
+       " '2014_01',\n",
+       " '2014_02',\n",
+       " '2014_03',\n",
+       " '2014_04',\n",
+       " '2014_05',\n",
+       " '2014_06',\n",
+       " '2014_07',\n",
+       " '2014_08',\n",
+       " '2014_09',\n",
+       " '2014_10',\n",
+       " '2014_11',\n",
+       " '2014_12',\n",
+       " '2015_01',\n",
+       " '2015_02',\n",
+       " '2015_03',\n",
+       " '2015_04',\n",
+       " '2015_05',\n",
+       " '2015_06',\n",
+       " '2015_07',\n",
+       " '2015_08',\n",
+       " '2015_09',\n",
+       " '2015_10',\n",
+       " '2015_11',\n",
+       " '2015_12',\n",
+       " '2016_01',\n",
+       " '2016_02',\n",
+       " '2016_03',\n",
+       " '2016_04',\n",
+       " '2016_05',\n",
+       " '2016_06',\n",
+       " '2016_07',\n",
+       " '2016_08',\n",
+       " '2016_09',\n",
+       " '2016_10',\n",
+       " '2016_11',\n",
+       " '2016_12',\n",
+       " '2017_01',\n",
+       " '2017_02',\n",
+       " '2017_03',\n",
+       " '2017_04',\n",
+       " '2017_05',\n",
+       " '2017_06',\n",
+       " '2017_07',\n",
+       " '2017_08',\n",
+       " '2017_09',\n",
+       " '2017_10',\n",
+       " '2017_11',\n",
+       " '2017_12',\n",
+       " '2018_01',\n",
+       " '2018_02',\n",
+       " '2018_03',\n",
+       " '2018_04',\n",
+       " '2018_05',\n",
+       " '2018_06',\n",
+       " '2018_07',\n",
+       " '2018_08',\n",
+       " '2018_09',\n",
+       " '2018_10',\n",
+       " '2018_11',\n",
+       " '2018_12',\n",
+       " '2019_01',\n",
+       " '2019_02',\n",
+       " '2019_03',\n",
+       " '2019_04',\n",
+       " '2019_05',\n",
+       " '2019_06',\n",
+       " '2019_07',\n",
+       " '2019_08',\n",
+       " '2019_09',\n",
+       " '2019_10',\n",
+       " '2019_11',\n",
+       " '2019_12',\n",
+       " '2020_01',\n",
+       " '2020_02',\n",
+       " '2020_03',\n",
+       " '2020_04',\n",
+       " '2020_05',\n",
+       " '2020_06',\n",
+       " '2020_07',\n",
+       " '2020_08',\n",
+       " '2020_09',\n",
+       " '2020_10',\n",
+       " '2020_11',\n",
+       " '2020_12',\n",
+       " '2021_01',\n",
+       " '2021_02',\n",
+       " '2021_03',\n",
+       " '2021_04',\n",
+       " '2021_05',\n",
+       " '2021_06',\n",
+       " '2021_07',\n",
+       " '2021_08',\n",
+       " '2021_09',\n",
+       " '2021_10',\n",
+       " '2021_11',\n",
+       " '2021_12']"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ym2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "9670dca7-3bcf-4f7a-9e91-45573d54930f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['기간'] = ym2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "de840047-f78d-47f9-9d60-b7e94a0b5e2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('전력량_물가지수_기간(2).csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db5e39c3-4627-4375-b5f8-a55ece90af7d",
+   "id": "efb2c5f0-d9e7-4d9d-857c-9ed339f25c42",
    "metadata": {},
    "outputs": [],
    "source": []
