--- a/industryapp/employment/data_1.ipynb
+++ b/industryapp/employment/data_1.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
+    "df_1[\"년월\"] = pd.to_datetime(df_1[\"년월\"] + \"-01\")"
    ]
   },
   {
@@ -65,17 +65,17 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2448 entries, 0 to 2447\n",
       "Data columns (total 8 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   연도      2448 non-null   int64  \n",
-      " 1   월       2448 non-null   int64  \n",
-      " 2   시도      2448 non-null   object \n",
-      " 3   고용률     2448 non-null   float64\n",
-      " 4   사용량     2448 non-null   int64  \n",
-      " 5   위도      2448 non-null   float64\n",
-      " 6   경도      2448 non-null   float64\n",
-      " 7   년월      2448 non-null   object \n",
-      "dtypes: float64(3), int64(3), object(2)\n",
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   연도      2448 non-null   int64         \n",
+      " 1   월       2448 non-null   int64         \n",
+      " 2   시도      2448 non-null   object        \n",
+      " 3   고용률     2448 non-null   float64       \n",
+      " 4   사용량     2448 non-null   int64         \n",
+      " 5   위도      2448 non-null   float64       \n",
+      " 6   경도      2448 non-null   float64       \n",
+      " 7   년월      2448 non-null   datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(3), int64(3), object(1)\n",
       "memory usage: 153.1+ KB\n"
      ]
     }
@@ -130,7 +130,7 @@
        "      <td>4398183</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2010-01</td>\n",
+       "      <td>2010-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -141,7 +141,7 @@
        "      <td>4168168</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2010-02</td>\n",
+       "      <td>2010-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -152,7 +152,7 @@
        "      <td>3624186</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2010-03</td>\n",
+       "      <td>2010-03-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -163,7 +163,7 @@
        "      <td>3719082</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2010-04</td>\n",
+       "      <td>2010-04-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -174,7 +174,7 @@
        "      <td>3426951</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2010-05</td>\n",
+       "      <td>2010-05-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -196,7 +196,7 @@
        "      <td>544310</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-08</td>\n",
+       "      <td>2021-08-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2444</th>\n",
@@ -207,7 +207,7 @@
        "      <td>495549</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-09</td>\n",
+       "      <td>2021-09-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2445</th>\n",
@@ -218,7 +218,7 @@
        "      <td>446949</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-10</td>\n",
+       "      <td>2021-10-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2446</th>\n",
@@ -229,7 +229,7 @@
        "      <td>438179</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-11</td>\n",
+       "      <td>2021-11-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2447</th>\n",
@@ -240,7 +240,7 @@
        "      <td>473291</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-12</td>\n",
+       "      <td>2021-12-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -248,18 +248,18 @@
        "</div>"
       ],
       "text/plain": [
-       "        연도   월       시도   고용률      사용량         위도          경도       년월\n",
-       "0     2010   1    서울특별시  57.6  4398183  37.551638  126.993243  2010-01\n",
-       "1     2010   2    서울특별시  57.8  4168168  37.551638  126.993243  2010-02\n",
-       "2     2010   3    서울특별시  58.3  3624186  37.551638  126.993243  2010-03\n",
-       "3     2010   4    서울특별시  59.2  3719082  37.551638  126.993243  2010-04\n",
-       "4     2010   5    서울특별시  60.0  3426951  37.551638  126.993243  2010-05\n",
-       "...    ...  ..      ...   ...      ...        ...         ...      ...\n",
-       "2443  2021   8  제주특별자치도  67.0   544310  33.424967  126.778084  2021-08\n",
-       "2444  2021   9  제주특별자치도  66.5   495549  33.424967  126.778084  2021-09\n",
-       "2445  2021  10  제주특별자치도  67.7   446949  33.424967  126.778084  2021-10\n",
-       "2446  2021  11  제주특별자치도  68.9   438179  33.424967  126.778084  2021-11\n",
-       "2447  2021  12  제주특별자치도  68.1   473291  33.424967  126.778084  2021-12\n",
+       "        연도   월       시도   고용률      사용량         위도          경도         년월\n",
+       "0     2010   1    서울특별시  57.6  4398183  37.551638  126.993243 2010-01-01\n",
+       "1     2010   2    서울특별시  57.8  4168168  37.551638  126.993243 2010-02-01\n",
+       "2     2010   3    서울특별시  58.3  3624186  37.551638  126.993243 2010-03-01\n",
+       "3     2010   4    서울특별시  59.2  3719082  37.551638  126.993243 2010-04-01\n",
+       "4     2010   5    서울특별시  60.0  3426951  37.551638  126.993243 2010-05-01\n",
+       "...    ...  ..      ...   ...      ...        ...         ...        ...\n",
+       "2443  2021   8  제주특별자치도  67.0   544310  33.424967  126.778084 2021-08-01\n",
+       "2444  2021   9  제주특별자치도  66.5   495549  33.424967  126.778084 2021-09-01\n",
+       "2445  2021  10  제주특별자치도  67.7   446949  33.424967  126.778084 2021-10-01\n",
+       "2446  2021  11  제주특별자치도  68.9   438179  33.424967  126.778084 2021-11-01\n",
+       "2447  2021  12  제주특별자치도  68.1   473291  33.424967  126.778084 2021-12-01\n",
        "\n",
        "[2448 rows x 8 columns]"
       ]
