--- a/cultureapp/tourism/data_1.ipynb
+++ b/cultureapp/tourism/data_1.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1['기간'] = df_1['기간'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
+    "df_1[\"기간\"] = pd.to_datetime(df_1[\"기간\"] + \"-01\")"
    ]
   },
   {
@@ -62,15 +62,15 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 144 entries, 0 to 143\n",
       "Data columns (total 5 columns):\n",
-      " #   Column  Non-Null Count  Dtype \n",
-      "---  ------  --------------  ----- \n",
-      " 0   기간      144 non-null    object\n",
-      " 1   관광객     144 non-null    int64 \n",
-      " 2   전력소비량   144 non-null    int64 \n",
-      " 3   연도      144 non-null    int64 \n",
-      " 4   월       144 non-null    int64 \n",
-      "dtypes: int64(4), object(1)\n",
-      "memory usage: 5.8+ KB\n"
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   기간      144 non-null    datetime64[ns]\n",
+      " 1   관광객     144 non-null    int64         \n",
+      " 2   전력소비량   144 non-null    int64         \n",
+      " 3   연도      144 non-null    int64         \n",
+      " 4   월       144 non-null    int64         \n",
+      "dtypes: datetime64[ns](1), int64(4)\n",
+      "memory usage: 5.8 KB\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2010-01</td>\n",
+       "      <td>2010-01-01</td>\n",
        "      <td>801636</td>\n",
        "      <td>2335102</td>\n",
        "      <td>2010</td>\n",
@@ -122,7 +122,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2010-02</td>\n",
+       "      <td>2010-02-01</td>\n",
        "      <td>893050</td>\n",
        "      <td>2188707</td>\n",
        "      <td>2010</td>\n",
@@ -130,7 +130,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2010-03</td>\n",
+       "      <td>2010-03-01</td>\n",
        "      <td>1090884</td>\n",
        "      <td>2091419</td>\n",
        "      <td>2010</td>\n",
@@ -138,7 +138,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2010-04</td>\n",
+       "      <td>2010-04-01</td>\n",
        "      <td>1086594</td>\n",
        "      <td>2115785</td>\n",
        "      <td>2010</td>\n",
@@ -146,7 +146,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2010-05</td>\n",
+       "      <td>2010-05-01</td>\n",
        "      <td>1050680</td>\n",
        "      <td>1988778</td>\n",
        "      <td>2010</td>\n",
@@ -162,7 +162,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>139</th>\n",
-       "      <td>2021-08</td>\n",
+       "      <td>2021-08-01</td>\n",
        "      <td>36904</td>\n",
        "      <td>2878232</td>\n",
        "      <td>2021</td>\n",
@@ -170,7 +170,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>140</th>\n",
-       "      <td>2021-09</td>\n",
+       "      <td>2021-09-01</td>\n",
        "      <td>39222</td>\n",
        "      <td>2636404</td>\n",
        "      <td>2021</td>\n",
@@ -178,7 +178,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>141</th>\n",
-       "      <td>2021-10</td>\n",
+       "      <td>2021-10-01</td>\n",
        "      <td>51396</td>\n",
        "      <td>2461071</td>\n",
        "      <td>2021</td>\n",
@@ -186,7 +186,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>142</th>\n",
-       "      <td>2021-11</td>\n",
+       "      <td>2021-11-01</td>\n",
        "      <td>57468</td>\n",
        "      <td>2519389</td>\n",
        "      <td>2021</td>\n",
@@ -194,7 +194,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143</th>\n",
-       "      <td>2021-12</td>\n",
+       "      <td>2021-12-01</td>\n",
        "      <td>51260</td>\n",
        "      <td>2779448</td>\n",
        "      <td>2021</td>\n",
@@ -206,18 +206,18 @@
        "</div>"
       ],
       "text/plain": [
-       "          기간      관광객    전력소비량    연도   월\n",
-       "0    2010-01   801636  2335102  2010   1\n",
-       "1    2010-02   893050  2188707  2010   2\n",
-       "2    2010-03  1090884  2091419  2010   3\n",
-       "3    2010-04  1086594  2115785  2010   4\n",
-       "4    2010-05  1050680  1988778  2010   5\n",
-       "..       ...      ...      ...   ...  ..\n",
-       "139  2021-08    36904  2878232  2021   8\n",
-       "140  2021-09    39222  2636404  2021   9\n",
-       "141  2021-10    51396  2461071  2021  10\n",
-       "142  2021-11    57468  2519389  2021  11\n",
-       "143  2021-12    51260  2779448  2021  12\n",
+       "            기간      관광객    전력소비량    연도   월\n",
+       "0   2010-01-01   801636  2335102  2010   1\n",
+       "1   2010-02-01   893050  2188707  2010   2\n",
+       "2   2010-03-01  1090884  2091419  2010   3\n",
+       "3   2010-04-01  1086594  2115785  2010   4\n",
+       "4   2010-05-01  1050680  1988778  2010   5\n",
+       "..         ...      ...      ...   ...  ..\n",
+       "139 2021-08-01    36904  2878232  2021   8\n",
+       "140 2021-09-01    39222  2636404  2021   9\n",
+       "141 2021-10-01    51396  2461071  2021  10\n",
+       "142 2021-11-01    57468  2519389  2021  11\n",
+       "143 2021-12-01    51260  2779448  2021  12\n",
        "\n",
        "[144 rows x 5 columns]"
       ]
