--- a/peopleapp/people_num/data_1.ipynb
+++ b/peopleapp/people_num/data_1.ipynb
@@ -50,7 +50,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
+    "# df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1[\"년월\"] = pd.to_datetime(df_1[\"년월\"] + \"-01\")"
    ]
   },
   {
@@ -65,17 +74,17 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2244 entries, 0 to 2243\n",
       "Data columns (total 8 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   시도      2244 non-null   object \n",
-      " 1   인구수     2244 non-null   float64\n",
-      " 2   연도      2244 non-null   int64  \n",
-      " 3   월       2244 non-null   int64  \n",
-      " 4   사용량     2244 non-null   float64\n",
-      " 5   위도      2244 non-null   float64\n",
-      " 6   경도      2244 non-null   float64\n",
-      " 7   년월      2244 non-null   object \n",
-      "dtypes: float64(4), int64(2), object(2)\n",
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   시도      2244 non-null   object        \n",
+      " 1   인구수     2244 non-null   float64       \n",
+      " 2   연도      2244 non-null   int64         \n",
+      " 3   월       2244 non-null   int64         \n",
+      " 4   사용량     2244 non-null   float64       \n",
+      " 5   위도      2244 non-null   float64       \n",
+      " 6   경도      2244 non-null   float64       \n",
+      " 7   년월      2244 non-null   datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(4), int64(2), object(1)\n",
       "memory usage: 140.4+ KB\n"
      ]
     }
@@ -130,7 +139,7 @@
        "      <td>4562632.0</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-01</td>\n",
+       "      <td>2011-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -141,7 +150,7 @@
        "      <td>4264449.0</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-02</td>\n",
+       "      <td>2011-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -152,7 +161,7 @@
        "      <td>3736362.0</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-03</td>\n",
+       "      <td>2011-03-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -163,7 +172,7 @@
        "      <td>3682652.0</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-04</td>\n",
+       "      <td>2011-04-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -174,7 +183,7 @@
        "      <td>3425703.0</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-05</td>\n",
+       "      <td>2011-05-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -196,7 +205,7 @@
        "      <td>544310.0</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-08</td>\n",
+       "      <td>2021-08-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2240</th>\n",
@@ -207,7 +216,7 @@
        "      <td>495549.0</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-09</td>\n",
+       "      <td>2021-09-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2241</th>\n",
@@ -218,7 +227,7 @@
        "      <td>446949.0</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-10</td>\n",
+       "      <td>2021-10-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2242</th>\n",
@@ -229,7 +238,7 @@
        "      <td>438179.0</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-11</td>\n",
+       "      <td>2021-11-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2243</th>\n",
@@ -240,7 +249,7 @@
        "      <td>473291.0</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-12</td>\n",
+       "      <td>2021-12-01</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -248,18 +257,31 @@
        "</div>"
       ],
       "text/plain": [
-       "           시도         인구수    연도   월        사용량         위도          경도       년월\n",
-       "0       서울특별시  10312835.0  2011   1  4562632.0  37.551638  126.993243  2011-01\n",
-       "1       서울특별시  10314245.0  2011   2  4264449.0  37.551638  126.993243  2011-02\n",
-       "2       서울특별시  10307783.0  2011   3  3736362.0  37.551638  126.993243  2011-03\n",
-       "3       서울특별시  10301829.0  2011   4  3682652.0  37.551638  126.993243  2011-04\n",
-       "4       서울특별시  10295643.0  2011   5  3425703.0  37.551638  126.993243  2011-05\n",
-       "...       ...         ...   ...  ..        ...        ...         ...      ...\n",
-       "2239  제주특별자치도    675883.0  2021   8   544310.0  33.424967  126.778084  2021-08\n",
-       "2240  제주특별자치도    676079.0  2021   9   495549.0  33.424967  126.778084  2021-09\n",
-       "2241  제주특별자치도    676569.0  2021  10   446949.0  33.424967  126.778084  2021-10\n",
-       "2242  제주특별자치도    676768.0  2021  11   438179.0  33.424967  126.778084  2021-11\n",
-       "2243  제주특별자치도    676759.0  2021  12   473291.0  33.424967  126.778084  2021-12\n",
+       "           시도         인구수    연도   월        사용량         위도          경도   \n",
+       "0       서울특별시  10312835.0  2011   1  4562632.0  37.551638  126.993243  \\\n",
+       "1       서울특별시  10314245.0  2011   2  4264449.0  37.551638  126.993243   \n",
+       "2       서울특별시  10307783.0  2011   3  3736362.0  37.551638  126.993243   \n",
+       "3       서울특별시  10301829.0  2011   4  3682652.0  37.551638  126.993243   \n",
+       "4       서울특별시  10295643.0  2011   5  3425703.0  37.551638  126.993243   \n",
+       "...       ...         ...   ...  ..        ...        ...         ...   \n",
+       "2239  제주특별자치도    675883.0  2021   8   544310.0  33.424967  126.778084   \n",
+       "2240  제주특별자치도    676079.0  2021   9   495549.0  33.424967  126.778084   \n",
+       "2241  제주특별자치도    676569.0  2021  10   446949.0  33.424967  126.778084   \n",
+       "2242  제주특별자치도    676768.0  2021  11   438179.0  33.424967  126.778084   \n",
+       "2243  제주특별자치도    676759.0  2021  12   473291.0  33.424967  126.778084   \n",
+       "\n",
+       "             년월  \n",
+       "0    2011-01-01  \n",
+       "1    2011-02-01  \n",
+       "2    2011-03-01  \n",
+       "3    2011-04-01  \n",
+       "4    2011-05-01  \n",
+       "...         ...  \n",
+       "2239 2021-08-01  \n",
+       "2240 2021-09-01  \n",
+       "2241 2021-10-01  \n",
+       "2242 2021-11-01  \n",
+       "2243 2021-12-01  \n",
        "\n",
        "[2244 rows x 8 columns]"
       ]
