--- a/peopleapp/population_density/data_1.ipynb
+++ b/peopleapp/population_density/data_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,16 +46,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
+    "df_1[\"년월\"] = pd.to_datetime(df_1[\"년월\"] + \"-01\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -65,17 +65,17 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2244 entries, 0 to 2243\n",
       "Data columns (total 8 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   년월      2244 non-null   object \n",
-      " 1   연도      2244 non-null   int64  \n",
-      " 2   월       2244 non-null   int64  \n",
-      " 3   시도      2244 non-null   object \n",
-      " 4   사용량     2244 non-null   float64\n",
-      " 5   인구밀도    2244 non-null   float64\n",
-      " 6   위도      2244 non-null   float64\n",
-      " 7   경도      2244 non-null   float64\n",
-      "dtypes: float64(4), int64(2), object(2)\n",
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   년월      2244 non-null   datetime64[ns]\n",
+      " 1   연도      2244 non-null   int64         \n",
+      " 2   월       2244 non-null   int64         \n",
+      " 3   시도      2244 non-null   object        \n",
+      " 4   사용량     2244 non-null   float64       \n",
+      " 5   인구밀도    2244 non-null   float64       \n",
+      " 6   위도      2244 non-null   float64       \n",
+      " 7   경도      2244 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(4), int64(2), object(1)\n",
       "memory usage: 140.4+ KB\n"
      ]
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2011-01</td>\n",
+       "      <td>2011-01-01</td>\n",
        "      <td>2011</td>\n",
        "      <td>1</td>\n",
        "      <td>강원도</td>\n",
@@ -134,7 +134,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2012-01</td>\n",
+       "      <td>2012-01-01</td>\n",
        "      <td>2012</td>\n",
        "      <td>1</td>\n",
        "      <td>강원도</td>\n",
@@ -145,7 +145,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2013-01</td>\n",
+       "      <td>2013-01-01</td>\n",
        "      <td>2013</td>\n",
        "      <td>1</td>\n",
        "      <td>강원도</td>\n",
@@ -156,7 +156,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2014-01</td>\n",
+       "      <td>2014-01-01</td>\n",
        "      <td>2014</td>\n",
        "      <td>1</td>\n",
        "      <td>강원도</td>\n",
@@ -167,7 +167,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2015-01</td>\n",
+       "      <td>2015-01-01</td>\n",
        "      <td>2015</td>\n",
        "      <td>1</td>\n",
        "      <td>강원도</td>\n",
@@ -189,7 +189,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2239</th>\n",
-       "      <td>2017-12</td>\n",
+       "      <td>2017-12-01</td>\n",
        "      <td>2017</td>\n",
        "      <td>12</td>\n",
        "      <td>충청북도</td>\n",
@@ -200,7 +200,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2240</th>\n",
-       "      <td>2018-12</td>\n",
+       "      <td>2018-12-01</td>\n",
        "      <td>2018</td>\n",
        "      <td>12</td>\n",
        "      <td>충청북도</td>\n",
@@ -211,7 +211,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2241</th>\n",
-       "      <td>2019-12</td>\n",
+       "      <td>2019-12-01</td>\n",
        "      <td>2019</td>\n",
        "      <td>12</td>\n",
        "      <td>충청북도</td>\n",
@@ -222,7 +222,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2242</th>\n",
-       "      <td>2020-12</td>\n",
+       "      <td>2020-12-01</td>\n",
        "      <td>2020</td>\n",
        "      <td>12</td>\n",
        "      <td>충청북도</td>\n",
@@ -233,7 +233,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2243</th>\n",
-       "      <td>2021-12</td>\n",
+       "      <td>2021-12-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>12</td>\n",
        "      <td>충청북도</td>\n",
@@ -248,23 +248,23 @@
        "</div>"
       ],
       "text/plain": [
-       "           년월    연도   월    시도        사용량   인구밀도         위도          경도\n",
-       "0     2011-01  2011   1   강원도  1582163.0   91.0  37.820812  128.156579\n",
-       "1     2012-01  2012   1   강원도  1595626.0   91.0  37.820812  128.156579\n",
-       "2     2013-01  2013   1   강원도  1612242.0   91.0  37.820812  128.156579\n",
-       "3     2014-01  2014   1   강원도  1559679.0   91.0  37.820812  128.156579\n",
-       "4     2015-01  2015   1   강원도  1617029.0   91.0  37.820812  128.156579\n",
-       "...       ...   ...  ..   ...        ...    ...        ...         ...\n",
-       "2239  2017-12  2017  12  충청북도  2289258.0  215.0  36.999466  127.700783\n",
-       "2240  2018-12  2018  12  충청북도  2333640.0  215.0  36.999466  127.700783\n",
-       "2241  2019-12  2019  12  충청북도  2355705.0  216.0  36.999466  127.700783\n",
-       "2242  2020-12  2020  12  충청북도  2434030.0  216.0  36.999466  127.700783\n",
-       "2243  2021-12  2021  12  충청북도  2506864.0  215.0  36.999466  127.700783\n",
+       "             년월    연도   월    시도        사용량   인구밀도         위도          경도\n",
+       "0    2011-01-01  2011   1   강원도  1582163.0   91.0  37.820812  128.156579\n",
+       "1    2012-01-01  2012   1   강원도  1595626.0   91.0  37.820812  128.156579\n",
+       "2    2013-01-01  2013   1   강원도  1612242.0   91.0  37.820812  128.156579\n",
+       "3    2014-01-01  2014   1   강원도  1559679.0   91.0  37.820812  128.156579\n",
+       "4    2015-01-01  2015   1   강원도  1617029.0   91.0  37.820812  128.156579\n",
+       "...         ...   ...  ..   ...        ...    ...        ...         ...\n",
+       "2239 2017-12-01  2017  12  충청북도  2289258.0  215.0  36.999466  127.700783\n",
+       "2240 2018-12-01  2018  12  충청북도  2333640.0  215.0  36.999466  127.700783\n",
+       "2241 2019-12-01  2019  12  충청북도  2355705.0  216.0  36.999466  127.700783\n",
+       "2242 2020-12-01  2020  12  충청북도  2434030.0  216.0  36.999466  127.700783\n",
+       "2243 2021-12-01  2021  12  충청북도  2506864.0  215.0  36.999466  127.700783\n",
        "\n",
        "[2244 rows x 8 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
