--- a/priceapp/kospi/data_1.ipynb
+++ b/priceapp/kospi/data_1.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
+    "df_1[\"년월\"] = pd.to_datetime(df_1[\"년월\"] + \"-01\")"
    ]
   },
   {
@@ -62,15 +62,15 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 144 entries, 0 to 143\n",
       "Data columns (total 5 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   년월      144 non-null    object \n",
-      " 1   연도      144 non-null    int64  \n",
-      " 2   월       144 non-null    int64  \n",
-      " 3   코스피 평균  144 non-null    float64\n",
-      " 4   사용량     144 non-null    int64  \n",
-      "dtypes: float64(1), int64(3), object(1)\n",
-      "memory usage: 5.8+ KB\n"
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   년월      144 non-null    datetime64[ns]\n",
+      " 1   연도      144 non-null    int64         \n",
+      " 2   월       144 non-null    int64         \n",
+      " 3   코스피 평균  144 non-null    float64       \n",
+      " 4   사용량     144 non-null    int64         \n",
+      "dtypes: datetime64[ns](1), float64(1), int64(3)\n",
+      "memory usage: 5.8 KB\n"
      ]
     }
    ],
@@ -114,7 +114,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2010-01</td>\n",
+       "      <td>2010-01-01</td>\n",
        "      <td>2010</td>\n",
        "      <td>1</td>\n",
        "      <td>1682.16</td>\n",
@@ -122,7 +122,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2010-02</td>\n",
+       "      <td>2010-02-01</td>\n",
        "      <td>2010</td>\n",
        "      <td>2</td>\n",
        "      <td>1598.96</td>\n",
@@ -130,7 +130,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2010-03</td>\n",
+       "      <td>2010-03-01</td>\n",
        "      <td>2010</td>\n",
        "      <td>3</td>\n",
        "      <td>1665.50</td>\n",
@@ -138,7 +138,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2010-04</td>\n",
+       "      <td>2010-04-01</td>\n",
        "      <td>2010</td>\n",
        "      <td>4</td>\n",
        "      <td>1730.29</td>\n",
@@ -146,7 +146,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2010-05</td>\n",
+       "      <td>2010-05-01</td>\n",
        "      <td>2010</td>\n",
        "      <td>5</td>\n",
        "      <td>1648.30</td>\n",
@@ -162,7 +162,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>139</th>\n",
-       "      <td>2021-08</td>\n",
+       "      <td>2021-08-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>8</td>\n",
        "      <td>3182.50</td>\n",
@@ -170,7 +170,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>140</th>\n",
-       "      <td>2021-09</td>\n",
+       "      <td>2021-09-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>9</td>\n",
        "      <td>3141.70</td>\n",
@@ -178,7 +178,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>141</th>\n",
-       "      <td>2021-10</td>\n",
+       "      <td>2021-10-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>10</td>\n",
        "      <td>2989.87</td>\n",
@@ -186,7 +186,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>142</th>\n",
-       "      <td>2021-11</td>\n",
+       "      <td>2021-11-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>11</td>\n",
        "      <td>2964.30</td>\n",
@@ -194,7 +194,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143</th>\n",
-       "      <td>2021-12</td>\n",
+       "      <td>2021-12-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>12</td>\n",
        "      <td>2988.49</td>\n",
@@ -206,18 +206,18 @@
        "</div>"
       ],
       "text/plain": [
-       "          년월    연도   월   코스피 평균       사용량\n",
-       "0    2010-01  2010   1  1682.16  39696747\n",
-       "1    2010-02  2010   2  1598.96  37208030\n",
-       "2    2010-03  2010   3  1665.50  35554125\n",
-       "3    2010-04  2010   4  1730.29  35968361\n",
-       "4    2010-05  2010   5  1648.30  33809235\n",
-       "..       ...   ...  ..      ...       ...\n",
-       "139  2021-08  2021   8  3182.50  48929956\n",
-       "140  2021-09  2021   9  3141.70  44818884\n",
-       "141  2021-10  2021  10  2989.87  41838223\n",
-       "142  2021-11  2021  11  2964.30  42829617\n",
-       "143  2021-12  2021  12  2988.49  47250619\n",
+       "            년월    연도   월   코스피 평균       사용량\n",
+       "0   2010-01-01  2010   1  1682.16  39696747\n",
+       "1   2010-02-01  2010   2  1598.96  37208030\n",
+       "2   2010-03-01  2010   3  1665.50  35554125\n",
+       "3   2010-04-01  2010   4  1730.29  35968361\n",
+       "4   2010-05-01  2010   5  1648.30  33809235\n",
+       "..         ...   ...  ..      ...       ...\n",
+       "139 2021-08-01  2021   8  3182.50  48929956\n",
+       "140 2021-09-01  2021   9  3141.70  44818884\n",
+       "141 2021-10-01  2021  10  2989.87  41838223\n",
+       "142 2021-11-01  2021  11  2964.30  42829617\n",
+       "143 2021-12-01  2021  12  2988.49  47250619\n",
        "\n",
        "[144 rows x 5 columns]"
       ]
