--- a/priceapp/price/data_1.ipynb
+++ b/priceapp/price/data_1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -29,52 +29,15 @@
       " 1   월       144 non-null    int64  \n",
       " 2   물가지수    144 non-null    float64\n",
       " 3   사용량     144 non-null    int64  \n",
-      " 4   기간      144 non-null    float64\n",
-      "dtypes: float64(2), int64(3)\n",
-      "memory usage: 5.8 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_1 = pd.read_csv(\"./전력량_물가지수_기간.csv\")\n",
-    "df_1.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "df_1.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 144 entries, 0 to 143\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   년월      144 non-null    object \n",
-      " 1   연도      144 non-null    int64  \n",
-      " 2   월       144 non-null    int64  \n",
-      " 3   코스피 평균  144 non-null    float64\n",
-      " 4   사용량     144 non-null    int64  \n",
+      " 4   기간      144 non-null    object \n",
       "dtypes: float64(1), int64(3), object(1)\n",
       "memory usage: 5.8+ KB\n"
      ]
     }
    ],
    "source": [
+    "df_1 = pd.read_csv(\"./전력량_물가지수_기간2.csv\")\n",
+    "df_1.drop(columns=['Unnamed: 0'], inplace=True)\n",
     "df_1.info()"
    ]
   },
@@ -104,53 +67,53 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>년월</th>\n",
        "      <th>연도</th>\n",
        "      <th>월</th>\n",
-       "      <th>코스피 평균</th>\n",
+       "      <th>물가지수</th>\n",
        "      <th>사용량</th>\n",
+       "      <th>기간</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2010-01</td>\n",
        "      <td>2010</td>\n",
        "      <td>1</td>\n",
-       "      <td>1682.16</td>\n",
-       "      <td>39696747</td>\n",
+       "      <td>85.351</td>\n",
+       "      <td>2335102</td>\n",
+       "      <td>2010_01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2010-02</td>\n",
        "      <td>2010</td>\n",
        "      <td>2</td>\n",
-       "      <td>1598.96</td>\n",
-       "      <td>37208030</td>\n",
+       "      <td>85.523</td>\n",
+       "      <td>2188707</td>\n",
+       "      <td>2010_02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2010-03</td>\n",
        "      <td>2010</td>\n",
        "      <td>3</td>\n",
-       "      <td>1665.50</td>\n",
-       "      <td>35554125</td>\n",
+       "      <td>85.696</td>\n",
+       "      <td>2091419</td>\n",
+       "      <td>2010_03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2010-04</td>\n",
        "      <td>2010</td>\n",
        "      <td>4</td>\n",
-       "      <td>1730.29</td>\n",
-       "      <td>35968361</td>\n",
+       "      <td>86.041</td>\n",
+       "      <td>2115785</td>\n",
+       "      <td>2010_04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2010-05</td>\n",
        "      <td>2010</td>\n",
        "      <td>5</td>\n",
-       "      <td>1648.30</td>\n",
-       "      <td>33809235</td>\n",
+       "      <td>86.128</td>\n",
+       "      <td>1988778</td>\n",
+       "      <td>2010_05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -162,43 +125,43 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>139</th>\n",
-       "      <td>2021-08</td>\n",
        "      <td>2021</td>\n",
        "      <td>8</td>\n",
-       "      <td>3182.50</td>\n",
-       "      <td>48929956</td>\n",
+       "      <td>102.750</td>\n",
+       "      <td>2878232</td>\n",
+       "      <td>2021_08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>140</th>\n",
-       "      <td>2021-09</td>\n",
        "      <td>2021</td>\n",
        "      <td>9</td>\n",
-       "      <td>3141.70</td>\n",
-       "      <td>44818884</td>\n",
+       "      <td>103.170</td>\n",
+       "      <td>2636404</td>\n",
+       "      <td>2021_09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>141</th>\n",
-       "      <td>2021-10</td>\n",
        "      <td>2021</td>\n",
        "      <td>10</td>\n",
-       "      <td>2989.87</td>\n",
-       "      <td>41838223</td>\n",
+       "      <td>103.350</td>\n",
+       "      <td>2461071</td>\n",
+       "      <td>2021_10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>142</th>\n",
-       "      <td>2021-11</td>\n",
        "      <td>2021</td>\n",
        "      <td>11</td>\n",
-       "      <td>2964.30</td>\n",
-       "      <td>42829617</td>\n",
+       "      <td>103.870</td>\n",
+       "      <td>2519389</td>\n",
+       "      <td>2021_11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>143</th>\n",
-       "      <td>2021-12</td>\n",
        "      <td>2021</td>\n",
        "      <td>12</td>\n",
-       "      <td>2988.49</td>\n",
-       "      <td>47250619</td>\n",
+       "      <td>104.040</td>\n",
+       "      <td>2779448</td>\n",
+       "      <td>2021_12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -206,18 +169,18 @@
        "</div>"
       ],
       "text/plain": [
-       "          년월    연도   월   코스피 평균       사용량\n",
-       "0    2010-01  2010   1  1682.16  39696747\n",
-       "1    2010-02  2010   2  1598.96  37208030\n",
-       "2    2010-03  2010   3  1665.50  35554125\n",
-       "3    2010-04  2010   4  1730.29  35968361\n",
-       "4    2010-05  2010   5  1648.30  33809235\n",
-       "..       ...   ...  ..      ...       ...\n",
-       "139  2021-08  2021   8  3182.50  48929956\n",
-       "140  2021-09  2021   9  3141.70  44818884\n",
-       "141  2021-10  2021  10  2989.87  41838223\n",
-       "142  2021-11  2021  11  2964.30  42829617\n",
-       "143  2021-12  2021  12  2988.49  47250619\n",
+       "       연도   월     물가지수      사용량       기간\n",
+       "0    2010   1   85.351  2335102  2010_01\n",
+       "1    2010   2   85.523  2188707  2010_02\n",
+       "2    2010   3   85.696  2091419  2010_03\n",
+       "3    2010   4   86.041  2115785  2010_04\n",
+       "4    2010   5   86.128  1988778  2010_05\n",
+       "..    ...  ..      ...      ...      ...\n",
+       "139  2021   8  102.750  2878232  2021_08\n",
+       "140  2021   9  103.170  2636404  2021_09\n",
+       "141  2021  10  103.350  2461071  2021_10\n",
+       "142  2021  11  103.870  2519389  2021_11\n",
+       "143  2021  12  104.040  2779448  2021_12\n",
        "\n",
        "[144 rows x 5 columns]"
       ]
@@ -233,11 +196,201 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1['기간'] = df_1['기간'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 144 entries, 0 to 143\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column  Non-Null Count  Dtype         \n",
+      "---  ------  --------------  -----         \n",
+      " 0   연도      144 non-null    int64         \n",
+      " 1   월       144 non-null    int64         \n",
+      " 2   물가지수    144 non-null    float64       \n",
+      " 3   사용량     144 non-null    int64         \n",
+      " 4   기간      144 non-null    datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(1), int64(3)\n",
+      "memory usage: 5.8 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>연도</th>\n",
+       "      <th>월</th>\n",
+       "      <th>물가지수</th>\n",
+       "      <th>사용량</th>\n",
+       "      <th>기간</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85.351</td>\n",
+       "      <td>2335102</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>2</td>\n",
+       "      <td>85.523</td>\n",
+       "      <td>2188707</td>\n",
+       "      <td>2010-02-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>3</td>\n",
+       "      <td>85.696</td>\n",
+       "      <td>2091419</td>\n",
+       "      <td>2010-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>4</td>\n",
+       "      <td>86.041</td>\n",
+       "      <td>2115785</td>\n",
+       "      <td>2010-04-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>5</td>\n",
+       "      <td>86.128</td>\n",
+       "      <td>1988778</td>\n",
+       "      <td>2010-05-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>139</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>8</td>\n",
+       "      <td>102.750</td>\n",
+       "      <td>2878232</td>\n",
+       "      <td>2021-08-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>140</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "      <td>103.170</td>\n",
+       "      <td>2636404</td>\n",
+       "      <td>2021-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>141</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>10</td>\n",
+       "      <td>103.350</td>\n",
+       "      <td>2461071</td>\n",
+       "      <td>2021-10-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>142</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>11</td>\n",
+       "      <td>103.870</td>\n",
+       "      <td>2519389</td>\n",
+       "      <td>2021-11-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>12</td>\n",
+       "      <td>104.040</td>\n",
+       "      <td>2779448</td>\n",
+       "      <td>2021-12-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>144 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       연도   월     물가지수      사용량         기간\n",
+       "0    2010   1   85.351  2335102 2010-01-01\n",
+       "1    2010   2   85.523  2188707 2010-02-01\n",
+       "2    2010   3   85.696  2091419 2010-03-01\n",
+       "3    2010   4   86.041  2115785 2010-04-01\n",
+       "4    2010   5   86.128  1988778 2010-05-01\n",
+       "..    ...  ..      ...      ...        ...\n",
+       "139  2021   8  102.750  2878232 2021-08-01\n",
+       "140  2021   9  103.170  2636404 2021-09-01\n",
+       "141  2021  10  103.350  2461071 2021-10-01\n",
+       "142  2021  11  103.870  2519389 2021-11-01\n",
+       "143  2021  12  104.040  2779448 2021-12-01\n",
+       "\n",
+       "[144 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1.to_csv('전력사용량,코스피.csv')"
+    "df_1.to_csv('전력량_물가지수.csv')"
    ]
   }
  ],
