--- a/residenceapp/residence/data_1.ipynb
+++ b/residenceapp/residence/data_1.ipynb
@@ -2,55 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json\n",
     "import folium"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2244 entries, 0 to 2243\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   시도      2244 non-null   object \n",
-      " 1   인구수     2244 non-null   float64\n",
-      " 2   연도      2244 non-null   int64  \n",
-      " 3   월       2244 non-null   int64  \n",
-      " 4   사용량     2244 non-null   float64\n",
-      " 5   위도      2244 non-null   float64\n",
-      " 6   경도      2244 non-null   float64\n",
-      " 7   년월      2244 non-null   object \n",
-      "dtypes: float64(4), int64(2), object(2)\n",
-      "memory usage: 140.4+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_1 = pd.read_csv(\"./전력량_인구수_마커.csv\")\n",
-    "df_1.drop(columns=['Unnamed: 0'], inplace=True)\n",
-    "df_1.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m')).dt.strftime(\"%Y-%m\")"
    ]
   },
   {
@@ -63,20 +21,71 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2244 entries, 0 to 2243\n",
+      "RangeIndex: 2448 entries, 0 to 2447\n",
       "Data columns (total 8 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   시도      2244 non-null   object \n",
-      " 1   인구수     2244 non-null   float64\n",
-      " 2   연도      2244 non-null   int64  \n",
-      " 3   월       2244 non-null   int64  \n",
-      " 4   사용량     2244 non-null   float64\n",
-      " 5   위도      2244 non-null   float64\n",
-      " 6   경도      2244 non-null   float64\n",
-      " 7   년월      2244 non-null   object \n",
-      "dtypes: float64(4), int64(2), object(2)\n",
-      "memory usage: 140.4+ KB\n"
+      " #   Column   Non-Null Count  Dtype  \n",
+      "---  ------   --------------  -----  \n",
+      " 0   년월       2448 non-null   object \n",
+      " 1   연도       2448 non-null   int64  \n",
+      " 2   월        2448 non-null   int64  \n",
+      " 3   시도       2448 non-null   object \n",
+      " 4   주택가격변동률  2448 non-null   float64\n",
+      " 5   사용량      2448 non-null   int64  \n",
+      " 6   위도       2448 non-null   float64\n",
+      " 7   경도       2448 non-null   float64\n",
+      "dtypes: float64(3), int64(3), object(2)\n",
+      "memory usage: 153.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_1 = pd.read_csv(\"./전력량_주택_all.csv\")\n",
+    "df_1.drop(columns=['Unnamed: 0'], inplace=True)\n",
+    "df_1.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1['년월'] = df_1['년월'].apply(lambda x: pd.to_datetime(str(x), format='%Y_%m'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_1[\"년월\"] = pd.to_datetime(df_1[\"년월\"] + \"-01\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2448 entries, 0 to 2447\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column   Non-Null Count  Dtype         \n",
+      "---  ------   --------------  -----         \n",
+      " 0   년월       2448 non-null   datetime64[ns]\n",
+      " 1   연도       2448 non-null   int64         \n",
+      " 2   월        2448 non-null   int64         \n",
+      " 3   시도       2448 non-null   object        \n",
+      " 4   주택가격변동률  2448 non-null   float64       \n",
+      " 5   사용량      2448 non-null   int64         \n",
+      " 6   위도       2448 non-null   float64       \n",
+      " 7   경도       2448 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(3), int64(3), object(1)\n",
+      "memory usage: 153.1+ KB\n"
      ]
     }
    ],
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -110,71 +119,71 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>시도</th>\n",
-       "      <th>인구수</th>\n",
+       "      <th>년월</th>\n",
        "      <th>연도</th>\n",
        "      <th>월</th>\n",
+       "      <th>시도</th>\n",
+       "      <th>주택가격변동률</th>\n",
        "      <th>사용량</th>\n",
        "      <th>위도</th>\n",
        "      <th>경도</th>\n",
-       "      <th>년월</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>10312835.0</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>2010</td>\n",
        "      <td>1</td>\n",
-       "      <td>4562632.0</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>4398183</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>10314245.0</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>2010-02-01</td>\n",
+       "      <td>2010</td>\n",
        "      <td>2</td>\n",
-       "      <td>4264449.0</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>4168168</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>10307783.0</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>2010-03-01</td>\n",
+       "      <td>2010</td>\n",
        "      <td>3</td>\n",
-       "      <td>3736362.0</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>3624186</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>10301829.0</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>2010-04-01</td>\n",
+       "      <td>2010</td>\n",
        "      <td>4</td>\n",
-       "      <td>3682652.0</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>3719082</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>서울특별시</td>\n",
-       "      <td>10295643.0</td>\n",
-       "      <td>2011</td>\n",
+       "      <td>2010-05-01</td>\n",
+       "      <td>2010</td>\n",
        "      <td>5</td>\n",
-       "      <td>3425703.0</td>\n",
+       "      <td>서울특별시</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>3426951</td>\n",
        "      <td>37.551638</td>\n",
        "      <td>126.993243</td>\n",
-       "      <td>2011-05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -188,83 +197,83 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2239</th>\n",
-       "      <td>제주특별자치도</td>\n",
-       "      <td>675883.0</td>\n",
+       "      <th>2443</th>\n",
+       "      <td>2021-08-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>8</td>\n",
-       "      <td>544310.0</td>\n",
+       "      <td>제주특별자치도</td>\n",
+       "      <td>0.96</td>\n",
+       "      <td>544310</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2240</th>\n",
-       "      <td>제주특별자치도</td>\n",
-       "      <td>676079.0</td>\n",
+       "      <th>2444</th>\n",
+       "      <td>2021-09-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>9</td>\n",
-       "      <td>495549.0</td>\n",
+       "      <td>제주특별자치도</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>495549</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2241</th>\n",
-       "      <td>제주특별자치도</td>\n",
-       "      <td>676569.0</td>\n",
+       "      <th>2445</th>\n",
+       "      <td>2021-10-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>10</td>\n",
-       "      <td>446949.0</td>\n",
+       "      <td>제주특별자치도</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>446949</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2242</th>\n",
-       "      <td>제주특별자치도</td>\n",
-       "      <td>676768.0</td>\n",
+       "      <th>2446</th>\n",
+       "      <td>2021-11-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>11</td>\n",
-       "      <td>438179.0</td>\n",
+       "      <td>제주특별자치도</td>\n",
+       "      <td>0.41</td>\n",
+       "      <td>438179</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2243</th>\n",
-       "      <td>제주특별자치도</td>\n",
-       "      <td>676759.0</td>\n",
+       "      <th>2447</th>\n",
+       "      <td>2021-12-01</td>\n",
        "      <td>2021</td>\n",
        "      <td>12</td>\n",
-       "      <td>473291.0</td>\n",
+       "      <td>제주특별자치도</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>473291</td>\n",
        "      <td>33.424967</td>\n",
        "      <td>126.778084</td>\n",
-       "      <td>2021-12</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2244 rows × 8 columns</p>\n",
+       "<p>2448 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           시도         인구수    연도   월        사용량         위도          경도       년월\n",
-       "0       서울특별시  10312835.0  2011   1  4562632.0  37.551638  126.993243  2011-01\n",
-       "1       서울특별시  10314245.0  2011   2  4264449.0  37.551638  126.993243  2011-02\n",
-       "2       서울특별시  10307783.0  2011   3  3736362.0  37.551638  126.993243  2011-03\n",
-       "3       서울특별시  10301829.0  2011   4  3682652.0  37.551638  126.993243  2011-04\n",
-       "4       서울특별시  10295643.0  2011   5  3425703.0  37.551638  126.993243  2011-05\n",
-       "...       ...         ...   ...  ..        ...        ...         ...      ...\n",
-       "2239  제주특별자치도    675883.0  2021   8   544310.0  33.424967  126.778084  2021-08\n",
-       "2240  제주특별자치도    676079.0  2021   9   495549.0  33.424967  126.778084  2021-09\n",
-       "2241  제주특별자치도    676569.0  2021  10   446949.0  33.424967  126.778084  2021-10\n",
-       "2242  제주특별자치도    676768.0  2021  11   438179.0  33.424967  126.778084  2021-11\n",
-       "2243  제주특별자치도    676759.0  2021  12   473291.0  33.424967  126.778084  2021-12\n",
+       "             년월    연도   월       시도  주택가격변동률      사용량         위도          경도\n",
+       "0    2010-01-01  2010   1    서울특별시     0.13  4398183  37.551638  126.993243\n",
+       "1    2010-02-01  2010   2    서울특별시     0.23  4168168  37.551638  126.993243\n",
+       "2    2010-03-01  2010   3    서울특별시     0.07  3624186  37.551638  126.993243\n",
+       "3    2010-04-01  2010   4    서울특별시    -0.02  3719082  37.551638  126.993243\n",
+       "4    2010-05-01  2010   5    서울특별시    -0.25  3426951  37.551638  126.993243\n",
+       "...         ...   ...  ..      ...      ...      ...        ...         ...\n",
+       "2443 2021-08-01  2021   8  제주특별자치도     0.96   544310  33.424967  126.778084\n",
+       "2444 2021-09-01  2021   9  제주특별자치도     0.85   495549  33.424967  126.778084\n",
+       "2445 2021-10-01  2021  10  제주특별자치도     0.75   446949  33.424967  126.778084\n",
+       "2446 2021-11-01  2021  11  제주특별자치도     0.41   438179  33.424967  126.778084\n",
+       "2447 2021-12-01  2021  12  제주특별자치도     0.21   473291  33.424967  126.778084\n",
        "\n",
-       "[2244 rows x 8 columns]"
+       "[2448 rows x 8 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,11 +284,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_1.to_csv('전력량_인구수_마커.csv')"
+    "df_1.to_csv('전력량_주택_all.csv')"
    ]
   }
  ],
